# virtualization-bredikhin-project

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
src/app/: const.py  main.py
src/app/api/: main.py
src/app/api/dependencies/: common.py  pagination.py  users.py
src/app/api/routes/: attachment.py  healthcheck.py  login.py  project.py  tag.py  task.py  task_tag.py  users.py
src/app/core/: security.py  settings.py
src/app/crud/: attachment.py  project.py  tag.py  task.py  task_tag.py  users.py
src/app/db/: database.py  schemas.py
src/app/db/models/: __init__.py  attachment.py  project.py  tag.py  task.py  task_tag.py  user.py
src/app/services/: attachment.py  project.py  tag.py  task.py  task_tag.py  users.py
src/app/utils/: healthcheck.py  naive_datetime.py
src/migrations/: env.py
src/migrations/versions/: 3ad885b27139_attachment.py  75ef26f14573_cascade.py  c9542d166689_users.py  e8bcd9de572f_tasks.py
